--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Your Name <you@example.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 pytest = "^7.1.2"
+mypy = "^0.961"
 
 [tool.poetry.dev-dependencies]
 
