--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,15 @@ authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-pytest = "^7.1.2"
-mypy = "^0.961"
 
 [tool.poetry.dev-dependencies]
+mypy = "^0.961"
+black = "^22.6.0"
+pytest = "^7.1.2"
+flake8 = "^4.0.1"
+
+[tool.black]
+line-length = 79
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
