--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -8,4 +8,4 @@ tasks:
       - |
         black interpreter tests
         mypy interpreter
-        flake8 interpreter
+        flake8 interpreter tests
